Fixed form-request-notify position on mobile devices#2

--- a/frontend/web/redesign/source/scss/form.scss
+++ b/frontend/web/redesign/source/scss/form.scss
@@ -137,7 +137,7 @@ select {
   }
 
   .form-request-notify {
-    //display: none;
+    display: none;
     position: relative;
     margin-top: -56px;
     width: 100%;
